<resources>
    <string name="app_name">MySharedPreferences</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="dumy_name">Saiful Anam</string>
    <string name="dumy_email">Saifulanam712@gmail.com</string>
    <string name="phone_number">No.HP</string>
    <string name="dumy_number">082211432121</string>
    <string name="age">Umur</string>
    <string name="dumy_age">21</string>
    <string name="suka_manchester_united">Suka Manchester United?</string>
    <string name="Ilovemu">I Love MU</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="save">SIMPAN</string>
    <string name="change">Ubah</string>

</resources>
