<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_from_user_preference"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FromUserPreferenceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activty_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activty_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activty_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/edt_name"
                android:inputType="textPersonName"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activty_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/edt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activty_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:id="@+id/edt_phone"
                android:inputType="phone"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activty_vertical_margin">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/edt_age"
                android:inputType="number"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suka_manchester_united"
            android:layout_marginBottom="@dimen/activty_vertical_margin"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_love_mu"
            android:layout_marginBottom="@dimen/activty_vertical_margin"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_yes"
                android:text="@string/yes"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_no"
                android:text="@string/no"
                android:layout_weight="1"/>

        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/save"
            android:id="@+id/btn_save"/>

    </LinearLayout>

</ScrollView>